--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello World!</h1>
     <div class="container" style="height: 65vh; width: 75%; margin: 0 auto; text-align: center;">
-    <img src="img/pic1.jpg" style="height: 100%; width: 100%; object-fit: cover"/>
+    <img id="image" src="img/pic1.jpg" style="height: 100%; width: 100%; object-fit: cover"/>
     <button onclick="changeimage()">Click Me!</button>
 </div>
 </div>
